--- a/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
@@ -16946,6 +16946,86 @@ nav.pagination {
     .text-color-light .weekly-event-count-shortcode.dot .count:before {
       background-color: rgba(255, 255, 255, 0.2); }
 
+.resource-teaser a {
+  color: inherit; }
+  .resource-teaser a:hover .entry-featured-image > .inner:after {
+    left: 0;
+    opacity: 1; }
+
+.resource-teaser .entry-featured-image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 1rem; }
+  .resource-teaser .entry-featured-image:before {
+    content: '';
+    display: block;
+    width: 0;
+    height: 0;
+    padding-top: 50%; }
+  .resource-teaser .entry-featured-image > .inner {
+    width: 100%;
+    position: relative;
+    background-color: #444;
+    overflow: hidden; }
+    .resource-teaser .entry-featured-image > .inner:after {
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      display: inline-block;
+      font-style: normal;
+      font-variant: normal;
+      font-weight: normal;
+      line-height: 1;
+      font-family: icomoon;
+      content: "";
+      position: absolute;
+      top: 50%;
+      margin-top: -1rem;
+      left: -.5rem;
+      width: 100%;
+      text-align: center;
+      -webkit-transition: left ease-out .15s, opacity .15s;
+      transition: left ease-out .15s, opacity .15s;
+      opacity: 0;
+      font-size: 2rem;
+      line-height: 1; }
+    .resource-teaser .entry-featured-image > .inner.dark {
+      color: #fff; }
+    .resource-teaser .entry-featured-image > .inner.light {
+      color: #233053; }
+  .resource-teaser .entry-featured-image .image {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    mix-blend-mode: multiply;
+    opacity: .5;
+    -webkit-filter: grayscale(1);
+            filter: grayscale(1); }
+    .resource-teaser .entry-featured-image .image img {
+      display: none; }
+
+.resource-teaser .entry-header {
+  margin-bottom: .5rem; }
+
+.resource-teaser .entry-type {
+  font-family: "proxima-nova", semplicitapro, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  text-transform: uppercase;
+  line-height: 1.2;
+  letter-spacing: .1em;
+  font-weight: 700;
+  font-size: 1.25rem;
+  margin-bottom: 1rem; }
+
+.resource-teaser .entry-title {
+  margin: 0;
+  font-size: 1.75rem;
+  font-weight: 500; }
+
 .wp-block-crown-blocks-container.alignfull + .wp-block-crown-blocks-container.alignfull,
 .wp-block-crown-blocks-container.alignfull + .wp-block-crown-blocks-container-featured-image.alignfull,
 .wp-block-crown-blocks-container.alignfull + .wp-block-crown-blocks-promo.alignfull,
