--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -764,6 +764,63 @@
 }
 
 
+/*	Featured Resource Slider
+---------------------------------------------------------*/
+
+.wp-block-crown-blocks-featured-resource-slider {
+	margin-bottom: 2rem;
+	.post-feed {
+		&.item-count-1 > .slick-slider { padding-bottom: 0; }
+		&.item-count-2 > .slick-slider { @include media-breakpoint-up(md) { padding-bottom: 0; } }
+		&.item-count-3 > .slick-slider { @include media-breakpoint-up(lg) { padding-bottom: 0; } }
+	}
+	.post-feed > .slick-slider {
+		position: relative;
+		margin: 0;
+		padding-bottom: 3rem;
+		.slick-arrow {
+			position: absolute;
+			bottom: 0;
+			right: 0;
+			overflow: hidden;
+			text-indent: -100000px;
+			border: none;
+			outline: none;
+			padding: 0;
+			width: 2rem;
+			height: 2rem;
+			background-color: transparent;
+			background-image: escape-svg(url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#{$primary}" class="bi bi-chevron-right" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/></svg>'));
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: contain;
+			opacity: .5;
+			transition: opacity .15s;
+			&:hover {
+				opacity: 1;
+			}
+			&.slick-prev {
+				right: 2rem;
+				transform: rotateY(180deg);
+			}
+		}
+		.slick-list {
+			margin: 0 -1rem;
+		}
+	}
+	article {
+		padding: 0 1rem;
+		outline: none;
+		a {
+			> * {
+				outline: none;
+				box-shadow: none;
+			}
+		}
+	}
+}
+
+
 /*	Stat
 ---------------------------------------------------------*/
 
